--- a/Vocabulous/src/home-view.html
+++ b/Vocabulous/src/home-view.html
@@ -19,11 +19,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         padding: 10px;
       }
+
+      h1{
+        color: grey;
+      }
     </style>
 
     <div class="card"> 
       <h1>Home View</h1>
-      <p>Startansicht</p>
     </div>
   </template>
 
