--- a/Vocabulous/src/statistics-view.html
+++ b/Vocabulous/src/statistics-view.html
@@ -19,13 +19,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         padding: 10px;
       }
+
+      h1{
+        color: grey;
+      }
     </style>
 
     <div class="card">
-      <div class="circle">Statistics View</div>
       <h1>Statistics View</h1>
-      <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
     </div>
   </template>
 
