--- a/Vocabulous/src/start-lesson.html
+++ b/Vocabulous/src/start-lesson.html
@@ -19,13 +19,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         padding: 10px;
       }
+      h1{
+        color: grey;
+      }
     </style>
 
     <div class="card">
-      <div class="circle">Start Lesson</div>
       <h1>Start Lesson</h1>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
-      <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
     </div>
   </template>
 
