--- a/old/src/my-app.html
+++ b/old/src/my-app.html
@@ -147,7 +147,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _showPage404() {
         this.activePage = 'not-found';
       }
-
+      _getRegisterLogin(){
+        return Polymer.dom(this.root).querySelector("register-login");
+      }
       /*ready() {
         super.ready();
         // Start loading the overview page after we're done showing the login page.
