--- a/old/src/my-app.html
+++ b/old/src/my-app.html
@@ -150,6 +150,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _getRegisterLogin(){
         return Polymer.dom(this.root).querySelector("register-login");
       }
+      _getOverviewpage(){
+        return Polymer.dom(this.root).querySelector("overview-page");
+      }
       /*ready() {
         super.ready();
         // Start loading the overview page after we're done showing the login page.
