--- a/Vocabulous/src/overview-page.html
+++ b/Vocabulous/src/overview-page.html
@@ -85,12 +85,12 @@
       <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="home-view" href="[[rootPath]]home-view">Home</a>
-          <a name="start-lesson" href="[[rootPath]]start-lesson">Start Lesson</a>
-          <a name="statistics-view" href="[[rootPath]]statistics-view">Statistics</a>
-          <a name="messages-view" href="[[rootPath]]messages-view">Messages</a>
-          <a name="account-view" href="[[rootPath]]account-view">Account</a>
-          <a name="settings-view" href="[[rootPath]]settings-view">Settings</a>
+          <a name="home-view">Home</a>
+          <a name="start-lesson">Start Lesson</a>
+          <a name="statistics-view">Statistics</a>
+          <a name="messages-view">Messages</a>
+          <a name="account-view">Account</a>
+          <a name="settings-view">Settings</a>
         </iron-selector>
       </app-drawer>
 
@@ -144,12 +144,10 @@
           '_routePageChanged(routeData.page)',
         ];
       }
-
       _routePageChanged(page) {
         // If no page was found in the route data, page will be an empty string.
         // Default to 'view1' in that case.
         this.page = page || 'home-view';
-
         // Close a non-persistent drawer when the page & route are changed.
         if (!this.$.drawer.persistent) {
           this.$.drawer.close();
