--- a/old/src/overview-page.html
+++ b/old/src/overview-page.html
@@ -155,7 +155,24 @@
           this.$.drawer.close();
         }
       }
-
+      _getHomeview(){
+        return Polymer.dom(this.root).querySelector("a[name=home-view]");
+      }
+      _getStartlesson(){
+        return Polymer.dom(this.root).querySelector("a[name=start-lesson]");
+      }
+      _getStatisticview(){
+        return Polymer.dom(this.root).querySelector("a[name=statistics-view]");
+      }
+      _getMessageview(){
+        return Polymer.dom(this.root).querySelector("a[name=messages-view]");
+      }
+      _getAccountview(){
+        return Polymer.dom(this.root).querySelector("a[name=account-view]");
+      }
+      _getSettingsview(){
+        return Polymer.dom(this.root).querySelector("a[name=settings-view]");
+      }
       _pageChanged(page) {
         // Load page import on demand. Show 404 page if fails
         var resolvedPageUrl = this.resolveUrl(page + '.html');
@@ -173,4 +190,5 @@
 
     window.customElements.define(OverviewPage.is, OverviewPage);
   </script>
+  <script src="../develop-javascript/src/overviewpage.js" type="module"></script>
 </dom-module>
