--- a/old/src/my-app.html
+++ b/old/src/my-app.html
@@ -46,7 +46,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style>
       :host {
-        --app-primary-color: #5a5f66;
+        --app-primary-color: #00b4f0;
         --app-secondary-color: black;
 
         display: block;
@@ -130,7 +130,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         // Load page import on demand. Show 404 page if fails
         /*this.authenticated = true;
         this.activePage = this.authenticated;*/
-        this.activePage = activePage || 'register-login';
+        this.activePage = activePage || 'overview-page';
 
       }
 
