--- a/old/src/my-app.html
+++ b/old/src/my-app.html
@@ -130,7 +130,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         // Load page import on demand. Show 404 page if fails
         /*this.authenticated = true;
         this.activePage = this.authenticated;*/
-        this.activePage = activePage || 'overview-page';
+        this.activePage = activePage || 'register-login';
 
       }
 
