--- a/Vocabulous/src/overview-page.html
+++ b/Vocabulous/src/overview-page.html
@@ -39,6 +39,7 @@
       :host {
         --app-primary-color: #1E88E5;
         --app-secondary-color: black;
+        --app-drawer-width: 13%;
 
         display: block;
       }
@@ -47,6 +48,11 @@
         display: none;
       }
 
+      app-drawer{
+        --app-drawer-content-container: {
+          background-color: #ffffff;
+        }
+      }
       app-header {
         color: #fff;
         background-color: var(--app-primary-color);
