--- a/old/src/overview-page.html
+++ b/old/src/overview-page.html
@@ -39,6 +39,7 @@
       :host {
         --app-primary-color: #1E88E5;
         --app-secondary-color: black;
+        --app-drawer-width: 13%;
 
         display: block;
       }
@@ -47,6 +48,11 @@
         display: none;
       }
 
+      app-drawer{
+        --app-drawer-content-container: {
+          background-color: #ffffff;
+        }
+      }
       app-header {
         color: #fff;
         background-color: var(--app-primary-color);
@@ -107,7 +113,7 @@
         tail="{{subroute}}">
     </app-route>
 
-    <app-drawer-layout fullbleed narrow="{{narrow}}">
+    <app-drawer-layout fullbleed force-narrow>
       <!-- Drawer content -->
       <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
             <app-toolbar>Menu</app-toolbar>
@@ -198,7 +204,7 @@
         return Polymer.dom(this.root).querySelector("a[name=messages-view]");
       }
       _getAccountview(){
-        return Polymer.dom(this.root).querySelector("a[name=account-view]");
+        return Polymer.dom(this.root).querySelector("account-view[name=account-view]");
       }
       _getSettingsview(){
         return Polymer.dom(this.root).querySelector("a[name=settings-view]");
@@ -214,6 +220,12 @@
       }
       _getAccounticon(){
         return Polymer.dom(this.root).querySelector("paper-icon-button[name=accounticon]");
+      }
+      _getMenuicon(){
+        return Polymer.dom(this.root).querySelector("paper-icon-button[name=menuicon]");
+      }
+      _getAppdrawer(){
+        return Polymer.dom(this.root).querySelector("app-drawer-layout");
       }
       _pageChanged(page) {
         // Load page import on demand. Show 404 page if fails
